docs: update README.md

--- a/src/sticky/demo/index.axml
+++ b/src/sticky/demo/index.axml
@@ -1,6 +1,6 @@
 <view class="page">
   <view class="title">Mini-Sticky demo</view>
-  <sticky scrollTop="{{scrollTop}}" className="sticky" threshold="0">
+  <sticky scrollTop="{{scrollTop}}" className="sticky" top="0">
     <view style="height: 40px; line-height: 40px; background: #eee; width: 100vw; text-align: center">这个是sticky</view>
     <view style="height: 40px; line-height: 40px; background: #eee; width: 100vw; text-align: center" slot="stick-faker">这个是sticky</view>
   </sticky>
