--- a/src/sticky/index.axml
+++ b/src/sticky/index.axml
@@ -2,7 +2,7 @@
   <view style="visibility: {{!isFixed ? 'visible' : 'hidden'}}">
     <slot />
   </view>
-  <view style="position: fixed; top: {{threshold}}px; visibility: {{isFixed ? 'visible' : 'hidden'}}">
+  <view style="position: fixed; top: {{top}}px; visibility: {{isFixed ? 'visible' : 'hidden'}}">
     <slot name="stick-faker">
   </view>
 </view>
